--- a/client/src/assets/scss/3-basics/_typography.scss
+++ b/client/src/assets/scss/3-basics/_typography.scss
@@ -26,6 +26,8 @@ html {
 
 body,
 table,
+button,
+a,
 form,
 input,
 textarea,
