--- a/client/src/assets/scss/4-layouts/_footer.scss
+++ b/client/src/assets/scss/4-layouts/_footer.scss
@@ -14,7 +14,7 @@
             display: flex;
 
             li + li {
-                margin-left: 1.5em;
+                margin-left: 0.5em;
             }
         }
     }
